syntax = "proto2";
option csharp_namespace = "LtAmpDotNet.Lib.Models.Protobuf";

/*
 * Changes the parameters of the DSP units
 *
 * response: SetDspUnitParameterStatus message
 */
message SetDspUnitParameter {
    // string id of the node to change (one of amp, stomp, mod, delay, reverb)
    required string nodeId = 1;

    // string id of the parameter to change
    required string parameterId = 2;
    
    //one of the following based on the need of the parameter
    oneof type {
        float floatParameter = 3;
        string stringParameter = 4;
        sint32 sint32Parameter = 5;
        bool boolParameter = 6;
    }
}
